[project]
name = "thor-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
  "torch>=2.10.0",
  "torchaudio>=2.10.0",
  "torchvision>=0.25.0",
  "triton>=3.6.0",
  "vllm>=0.16.0rc2.dev147",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cuda-13", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cuda-13", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cuda-13", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
triton = [
  { index = "pytorch-cuda-13", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
vllm = [{ index = "vllm-nightly" }]

[[tool.uv.index]]
name = "pytorch-cuda-13"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "vllm-nightly"
url = "https://wheels.vllm.ai/nightly/cu130"
explicit = true
